updated to 3.4, but some nametextmaps and weapons may not work, because i couldn't find proper 3.4 resources

--- a/bot/resources/ManualTextMapConfigData.json
+++ b/bot/resources/ManualTextMapConfigData.json
@@ -28133,6 +28133,13 @@
         ]
     },
     {
+        "textMapId": "UI_GACHA_SHOW_PANEL_A0115_TITLE",
+        "textMapContentTextMapHash": 2877368774,
+        "paramTypes": [
+            "TEXT_PARAM_NONE"
+        ]
+    },
+    {
         "textMapId": "UI_MINIMAP_SETTING_DESC",
         "textMapContentTextMapHash": 3090159646,
         "paramTypes": [
