--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-vkbottle>=4.3.10
+aiocache
+aiofiles
+aiohttp
+asyncpg
+loguru
+msgspec
+pillow
+vkbottle
 vkbottle-types>=5.131.146.13
-msgspec>=0.9.0
-loguru>=0.6.0
-asyncpg>=0.26.0
