--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ aiocache
 aiofiles
 aiohttp
 asyncpg>=0.26.0
-dotenv
 loguru>=0.6.0
 msgspec>=0.9.0
 pillow
+python-dotenv
 vkbottle>=4.3.10
 vkbottle-types>=5.131.146.13
